--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,1 +1,17 @@
 <h2>You're viewing game <%= @game.name %></h2>
+
+<% if @player.persisted? %>
+    <h3>Registered as player <%= @player.username %></h3>
+<% end%>
+
+<% unless @player.persisted? %>
+    <p>Looks like you haven't registered yet. Pick a username to sign up.</p>
+
+    <%= form_with model: @player do |f| %>
+        <%= hidden_field_tag :game_uuid, @game.uuid %>
+
+        <%= f.label :username %>
+        <%= f.text_field :username %>
+        <%= f.submit "Register" %>
+    <% end %>
+<% end %>
